--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,13 +31,10 @@ html {
   font-family: "TT Norms Pro", sans-serif;
   font-size: 1rem;
   color: white;
+  background-color: #101428;
   line-height: 1.3;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
 h1 {
   margin: 0;
 }
