--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,83 @@ p {
   min-height: 100vh;
   padding: 0 8%;
 }
+nav {
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-nav {
+  position: absolute;
+  left: -100%;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  padding-top: 120px;
+  list-style: none;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  transition: all 0.4s;
+  z-index: 2;
+  gap: 10px;
+  min-height: 100vh;
+  justify-content: center;
+}
+.main-nav.active {
+  left: 0;
+  background-color: rgb(16, 20, 40, 0.9);
+  box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+}
+.main-nav a {
+  font-size: clamp(1rem, 0.8576rem + 0.6329vw, 1.25rem);
+  display: inline-block;
+  margin: 16px 32px;
+  text-decoration: none;
+}
+
+.logo {
+  position: relative;
+  z-index: 3;
+}
+.logo a {
+  margin: 0;
+}
+
+.bar {
+  display: block;
+  width: 20px;
+  height: 2px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+  border-radius: 1px;
+  margin-bottom: 4px;
+}
+
+.hamburger {
+  cursor: pointer;
+  z-index: 3;
+}
+
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+  -webkit-transform: translateY(6px) rotate(45deg);
+  transform: translateY(6px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+  -webkit-transform: translateY(-6px) rotate(-45deg);
+  transform: translateY(-6px) rotate(-45deg);
+}
+
+.bar:last-child {
+  margin-bottom: 0;
+}
+
 .hero-wrapper {
   display: flex;
   flex-direction: column;
@@ -66,30 +143,6 @@ p {
 }
 .hero {
   max-width: 500px;
-}
-.main-nav {
-  padding: 40px 0;
-  margin: 0;
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.main-nav a {
-  font-size: clamp(0.875rem, 0.6614rem + 0.9494vw, 1.25rem);
-  display: inline-block;
-  margin: 0 32px;
-  text-decoration: none;
-  margin-bottom: 16px;
-}
-.logo {
-  flex-basis: 100%;
-  margin: 0 auto;
-  margin-bottom: 32px;
-  text-align: center;
-}
-.logo a {
-  margin: 0;
 }
 
 .sunhead {
@@ -136,6 +189,21 @@ p {
   margin-top: -2px;
 }
 @media (min-width: 992px) {
+  .hamburger {
+    display: none;
+  }
+  .main-nav {
+    display: flex;
+    position: static;
+    flex-direction: revert;
+    padding: 0;
+    min-height: auto;
+    box-shadow: none;
+    width: auto;
+  }
+  .main-nav.active {
+    background-color: transparent;
+  }
   .wrapper {
     padding: 0 10%;
   }
@@ -145,7 +213,7 @@ p {
     margin-right: auto;
   }
   .main-nav a {
-    margin-bottom: 0;
+    margin: 0 32px;
   }
   .main-nav li:last-child a {
     margin-right: 0;
