--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+:root{
+  --color-black:#213441;
+}
 *,
 *::before,
 *::after {
@@ -13,52 +16,52 @@ html {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   color: white;
-  background-color: #101528;
+  background-color: #f3f3f3;
   line-height: 1.3;
   size-adjust: 100%;
 }
 h1 {
   margin: 0;
+  text-align: center;
+}
+h2{
+  font-size: clamp(2rem, 1.0691rem + 2.9787vw, 3.5rem);
+  text-align: center;
+  margin-top: 2em;
+}
+h3{
+  font-size: 1.375rem;
+  font-size: clamp(1.375rem, 0.7766rem + 1.9149vw, 2.5rem);
+  text-align: center;
+}
+h4{
+  margin: 0;
 }
 p {
-  font-size: clamp(1rem, 0.7864rem + 0.9494vw, 1.375rem);
+  font-size: 0.875rem;
   line-height: 1.5;
-  color: rgba(255, 255, 255, 0.7);
-  margin: 32px 0 34px;
 }
 a {
   color: white;
-  cursor: default;
   text-decoration: none;
 }
 sup {
   font-size: 0.5em;
 }
 img {
+  max-width: 100%;
   vertical-align: middle;
 }
 header {
   width: 100%;
+  background-color: #101528;
 }
 
-.wrapper {
-  /* background-image: url('../images/bg-header.jpeg'); */
-  background-image: url('../images/islam.svg');
-  background-repeat: no-repeat;
-  background-size: 400px;
-  background-position: calc(100% + 140px) center;
-  min-height: -webkit-fill-available;
-  min-height: 100vh;
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: 102px 1fr 102px;
-  align-content: space-between;
-  align-items: center;
-}
 .container {
   padding-left: 5%;
   padding-right: 5%;
   max-width: 1440px;
+  width: 100%;
   margin: 0 auto;
 }
 nav {
@@ -138,19 +141,43 @@ nav {
   margin-bottom: 0;
 }
 
+/* ========== Hero ===== */
+
 .hero {
   display: flex;
   flex-direction: column;
+  min-height: calc(100svh - 99px);
   justify-content: center;
-  padding-top: 64px;
-  padding-bottom: 64px;
-  /* background-image: url('../images/islam.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: calc(100% + 185px) center; */
+  background-color: #101528;
 }
+
+.hero-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .hero-content {
   max-width: 525px;
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+.hero-content h1{
+  text-align: left;
+}
+.hero-image{
+  flex: 1;
+  max-width: 600px;
+  position: absolute;
+    right: -30%;
+}
+.hero::after{
+  content: "";
+  position: absolute;
+    background-image: url('../images/islam.svg');
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: calc(100% + 140px) center;
 }
 
 .sunhead {
@@ -160,7 +187,14 @@ nav {
   color: #8ffddb;
   font-size: clamp(2.2rem, 1.3171rem + 3.9241vw, 3.75rem);
 }
-
+.tagline{
+  margin: 32px 0 34px;
+  color: rgba(255, 255, 255, 0.7);
+}
+.subtitle{
+  text-align: center;
+  margin-top: 16px;
+}
 .btn {
   font-weight: bold;
   display: inline-block;
@@ -171,30 +205,145 @@ nav {
   background-color: #8ffddb;
 }
 
-.footer-nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px 0;
-  padding-left: 0;
-  margin: 0;
-  list-style-type: none;
-  justify-content: center;
-  padding-bottom: 24px;
-  text-align: center;
-}
-footer {
-  align-self: end;
-}
-.footer-nav li {
-  min-width: 130px;
-  flex: 1;
-}
-.footer-nav a {
-  font-size: 10px;
-  padding: 4px;
+/* ============ About Us ========= */
+.team{
+  color: #213441;
 }
 
+.team__subtitle{
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+/* == member cards == */
+
+.member-header{
+  display: flex;
+  align-items: center;
+}
+
+.member__avatar{
+  border-radius: 50%;
+  margin-right: 16px;
+  width: 80px;
+  outline: 3px solid #E6E6E6;
+}
+.member__name{
+  font-size: 18px;
+  font-weight: 600;
+}
+.member__role{
+  font-size: 0.875rem;
+
+}
+.member__text{
+  font-size: 0.875rem;
+  margin: 16px 0;
+}
+.member__link{
+  text-align: center;
+}
+.cards-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.member-card{
+  background-color: white;
+  padding:28px;
+  margin: 0 20px 40px;
+  box-shadow:0px 10px 40px rgba(0, 0, 0, 0.10);
+  border-radius: 16px;
+  max-width: 600px;
+}
+
+/* ======== Mining Market ======= */
+.mining-market{
+  color: white;
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
+  padding: 20px 0;
+}
+.mining-market--light{
+  color: var(--color-black);
+  background: #f3f3f3;
+}
+.mining-card{
+  max-width: 600px;
+  margin-bottom: 28px;
+}
+
+/* ======= Business Model ====== */
+.business-model{
+  padding: 16px 0;
+  text-align: center;
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
+}
+.business-model__heading{
+  margin-bottom: 16px;
+}
+.business-model-content{
+  margin: 40px 0 80px;
+}
+.business-model__image{
+  background-color: white;
+  box-shadow: 0px 21px 77px 0px rgba(0, 0, 0, 0.10);
+  display: block;
+  padding: 40px;
+  border-radius: 22px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ============ Why us ========= */
+.whyus{
+  background-color: #f3f3f3;
+  color: var(--color-black);
+}
+.whuus__title{
+  margin-bottom: 0;
+}
+.whyus__heading{
+  text-align: left;
+}
+.versus{
+  width: 80px;
+  text-align: center;
+
+  padding: 12px 24px;
+  margin: 32px auto;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow:0px 10px 40px rgba(0, 0, 0, 0.10);
+  font-weight: 700;
+}
+
+/* ========= How to start ========= */
+.steps{
+  color: white;
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
+  padding: 16px 0;
+  position: relative;
+}
+.steps::before{
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('../images/islam-10.png');
+  background-repeat: no-repeat;
+  background-size: 400px;
+  background-position: center top;
+}
+
+
 @media (min-width: 992px) {
+  p{
+    font-size: 1rem
+  }
+  /* ========== Navbar ========== */
   .hamburger {
     display: none;
   }
@@ -232,11 +381,43 @@ footer {
   .main-nav li:last-child a {
     margin-right: 0;
   }
-  .footer-nav {
-    gap: 8px;
-    flex-wrap: nowrap;
+  /* ================ Hero =========== */
+  .hero-image{
+    position: static;
   }
-  .footer-nav a {
-    padding: 8px;
+  /* ============ About us ==========*/
+  /* == Member cards */
+  .cards-wrapper{
+    justify-content: space-between;
   }
+  .member-card{
+    flex-basis: 45%;
+  }
+  .member__text{
+    font-size: 1rem;
+  }
+  /* ===== Mining market ===== */
+  .mining-card{
+    flex-basis: 45%;
+  }
+  /* ======== Business model ===== */
+  .business-model__image{
+    max-width: 600px;
+  }
+  /* ======= Why Us ====== */
+  .whyus-content{
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+  }
+  .whyus__heading--right{
+    text-align: right;
+  }
+  .versus{
+    font-size: 1.5rem;
+    width: 100px;
+    flex-shrink: 0;
+    margin: 3em 0;
+  }
+  
 }
