--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,12 +10,15 @@ html,
 body {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  font-size: 0.875rem;
 }
 
 html {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
-  color: white;
+  color: var(--color-black);
   background-color: #f3f3f3;
   line-height: 1.3;
   size-adjust: 100%;
@@ -27,7 +30,6 @@ h1 {
 h2{
   font-size: clamp(2rem, 1.0691rem + 2.9787vw, 3.5rem);
   text-align: center;
-  margin-top: 2em;
 }
 h3{
   font-size: 1.375rem;
@@ -51,6 +53,9 @@ sup {
 img {
   max-width: 100%;
   vertical-align: middle;
+}
+address{
+  font-style: normal;
 }
 header {
   width: 100%;
@@ -155,6 +160,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .hero-content {
@@ -168,8 +174,10 @@ nav {
 .hero-image{
   flex: 1;
   max-width: 600px;
+  width: 370px;
+  height: auto;
   position: absolute;
-    right: -30%;
+  right: -30%;
 }
 .hero::after{
   content: "";
@@ -181,6 +189,7 @@ nav {
 }
 
 .sunhead {
+  color: white;
   font-size: clamp(1.75rem, 1.3228rem + 1.8987vw, 2.5rem);
 }
 .headline {
@@ -194,6 +203,8 @@ nav {
 .subtitle{
   text-align: center;
   margin-top: 16px;
+  margin-left: 8%;
+  margin-right: 8%;
 }
 .btn {
   font-weight: bold;
@@ -208,11 +219,7 @@ nav {
 /* ============ About Us ========= */
 .team{
   color: #213441;
-}
-
-.team__subtitle{
-  margin-left: 10%;
-  margin-right: 10%;
+  padding: 40px 0 60px;
 }
 
 /* == member cards == */
@@ -261,7 +268,7 @@ nav {
 .mining-market{
   color: white;
   background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
-  padding: 20px 0;
+  padding: 30px 0 70px;
 }
 .mining-market--light{
   color: var(--color-black);
@@ -272,10 +279,53 @@ nav {
   margin-bottom: 28px;
 }
 
+/* ========= Exclusive Club ========== */
+.exclusive-club{
+  padding: 30px 0px 0;
+}
+.million-card{
+  background-color: white;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.10);
+  text-align: center;
+  padding:30px 60px;
+  border-radius: 30px;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
+}
+
+/* ======== Strategy Card ====== */
+.strategy-cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px 0 0px;
+}
+.strategy-card{
+  display: flex;
+  max-width: 295px;
+  align-items: flex-start;
+  margin-bottom: 30px;
+}
+.strategy-card__image{
+  margin-right: 20px;
+  margin-top: 2px;
+}
+.strategy-card__text{
+  margin-top: 4px;
+  font-size: 13px;
+  margin-right: -12px;
+}
+.ourbet{
+  margin-bottom: 60px;
+}
+
 /* ======= Business Model ====== */
 .business-model{
-  padding: 16px 0;
+  padding: 30px 0;
   text-align: center;
+  color: white;
   background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
 }
 .business-model__heading{
@@ -298,6 +348,7 @@ nav {
 .whyus{
   background-color: #f3f3f3;
   color: var(--color-black);
+  padding: 30px 0;
 }
 .whuus__title{
   margin-bottom: 0;
@@ -321,7 +372,7 @@ nav {
 .steps{
   color: white;
   background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
-  padding: 16px 0;
+  padding: 30px 0;
   position: relative;
 }
 .steps::before{
@@ -338,6 +389,123 @@ nav {
   background-position: center top;
 }
 
+/* ============ FAQS ========= */
+
+.faqs{
+  padding: 30px 0;
+}
+
+.faq__item{
+  margin:0 20px;
+}
+.accordion {
+  text-align: left;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+  padding: 14px 20px;
+  padding-right: 40px;
+  border-radius: 50px;
+  margin: 0;
+  transition: 0.4s;
+  background-color: white;
+  box-shadow:0px 10px 40px rgba(0, 0, 0, 0.10);
+  -webkit-tap-highlight-color: transparent;
+}
+.accordion::before{
+  content: "";
+  position: relative;
+  display: inline-block;
+  background-image: url('../images/faq-icon.png');
+  background-size: contain;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  padding-right: 2.5em;
+  width: 1.3em;
+  height: 1.3em;
+}
+
+.accordion:after {
+  content: url('../images/plus-icon.svg');
+  float: right;
+  margin-left: 14px;
+  position: absolute;
+  right: 20px;
+  line-height: 1;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.accordion.active:after {
+  content: url('../images/minus.svg');
+  transition: all 0.5s;
+}
+
+.panel {
+  font-weight: 500;
+  padding: 0 18px;
+  margin: 10px 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+/* ========== Footer ======== */
+.footer{
+  color: white;
+  font-size: 12px;
+  background-image:  linear-gradient(180deg, #122634 7.92%, #223542 100%);
+}
+.footer-links{
+  display: flex;
+  justify-content: center;
+}
+.footer-list{
+  padding-left: 0;
+  list-style-type: none;
+}
+.footer-nav{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 100px 0 50px;
+}
+.footer-nav-item{
+  min-width: 50px;
+}
+.footer-nav-item p{
+  font-size: 12px;
+  font-weight: bold;
+}
+.footer-social{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.footer-social img{
+  border-radius: 5px;
+}
+.footer-info{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  line-height: 1.7;
+}
+.footer-logo{
+  padding-bottom: 50px;
+  text-align: center;
+}
+
+
+
+
+
+/* ========== Utilities ========== */
+.bold{
+  font-weight: bold;
+}
 
 @media (min-width: 992px) {
   p{
@@ -404,6 +572,14 @@ nav {
   .business-model__image{
     max-width: 600px;
   }
+  /* ========== Strategy ======== */
+  .strategy-cards{
+    justify-content: space-evenly;
+  }
+  .strategy-card{
+    margin-top: 60px;
+   margin-bottom: 0;
+  }
   /* ======= Why Us ====== */
   .whyus-content{
     display: flex;
@@ -419,5 +595,22 @@ nav {
     flex-shrink: 0;
     margin: 3em 0;
   }
+  /* ============ FAQS ========= */
+  .faqs-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-evenly;
+  }
+  .faqs-wrapper > * {
+    flex-basis: 45%;
+  }
+.accordion {
+  font-size: 18px;
+}
+.panel{
+  padding:0 30px;
+}
+
   
 }
