--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
-:root{
-  --color-black:#213441;
+:root {
+  --color-black: #213441;
 }
 *,
 *::before,
@@ -23,21 +23,32 @@ html {
   line-height: 1.3;
   size-adjust: 100%;
 }
+body {
+  letter-spacing: 0.5px;
+}
 h1 {
   margin: 0;
   text-align: center;
 }
-h2{
-  font-size: clamp(2rem, 1.0691rem + 2.9787vw, 3.5rem);
+h2 {
+  font-size: 2.125rem;
+  font-size: clamp(2.125rem, 1.3768rem + 2.3944vw, 4.25rem);
+  font-weight: bold;
   text-align: center;
+  margin: 0;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+  margin-bottom: 1.5em;
 }
-h3{
+h3 {
   font-size: 1.375rem;
   font-size: clamp(1.375rem, 0.7766rem + 1.9149vw, 2.5rem);
   text-align: center;
 }
-h4{
+h4 {
   margin: 0;
+  font-size: 1rem;
+  font-size: clamp(0.875rem, 0.748rem + 0.4065vw, 1rem);
 }
 p {
   font-size: 0.875rem;
@@ -54,12 +65,20 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
-address{
+address {
   font-style: normal;
 }
-header {
-  width: 100%;
-  background-color: #101528;
+.tagline {
+  font-size: 1rem;
+  font-size: clamp(1rem, 0.6039rem + 1.2676vw, 2.125rem);
+  line-height: 1;
+  text-align: center;
+  margin-bottom: 0;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 0;
+  padding-top: 4em;
+  letter-spacing: -1px;
 }
 
 .container {
@@ -69,6 +88,21 @@ header {
   width: 100%;
   margin: 0 auto;
 }
+
+.card {
+  background-color: white;
+  border-radius: 28px;
+  margin: 20px 20px 20px;
+  padding: 28px;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
+}
+
+/* ============ Navbar ========= */
+header {
+  width: 100%;
+  background-color: #101528;
+}
+
 nav {
   padding: 38px 0;
   display: flex;
@@ -146,7 +180,7 @@ nav {
   margin-bottom: 0;
 }
 
-/* ========== Hero ===== */
+/* ========== Hero ======== */
 
 .hero {
   display: flex;
@@ -156,7 +190,7 @@ nav {
   background-color: #101528;
 }
 
-.hero-wrapper{
+.hero-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -168,10 +202,10 @@ nav {
   padding-top: 64px;
   padding-bottom: 64px;
 }
-.hero-content h1{
+.hero-content h1 {
   text-align: left;
 }
-.hero-image{
+.hero-image {
   flex: 1;
   max-width: 600px;
   width: 370px;
@@ -179,16 +213,16 @@ nav {
   position: absolute;
   right: -30%;
 }
-.hero::after{
-  content: "";
+.hero::after {
+  content: '';
   position: absolute;
-    background-image: url('../images/islam.svg');
+  background-image: url('../images/islam.svg');
   background-repeat: no-repeat;
   background-size: 50%;
   background-position: calc(100% + 140px) center;
 }
 
-.sunhead {
+.subhead {
   color: white;
   font-size: clamp(1.75rem, 1.3228rem + 1.8987vw, 2.5rem);
 }
@@ -196,15 +230,18 @@ nav {
   color: #8ffddb;
   font-size: clamp(2.2rem, 1.3171rem + 3.9241vw, 3.75rem);
 }
-.tagline{
+.hero__subtitle {
   margin: 32px 0 34px;
   color: rgba(255, 255, 255, 0.7);
 }
-.subtitle{
+.subtitle {
   text-align: center;
   margin-top: 16px;
   margin-left: 8%;
   margin-right: 8%;
+  font-weight: 500;
+  line-height: 1.75;
+  letter-spacing: 0.5px;
 }
 .btn {
   font-weight: bold;
@@ -217,77 +254,130 @@ nav {
 }
 
 /* ============ About Us ========= */
-.team{
+.about {
+  padding-bottom: 64px;
+}
+.about__subhead {
+  font-size: 1.0625rem;
+  font-size: clamp(1.0625rem, 0.6884rem + 1.1972vw, 2.125rem);
+  margin: 1.5em auto 0.75em;
+  font-weight: 600;
+}
+.about__headline {
+  margin-bottom: 0.75em;
+}
+.about__text {
+  line-height: 1.8;
+  text-align: center;
+}
+.about-cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.card--about {
+  display: flex;
+  align-items: center;
+  gap: 23px;
+  max-width: 410px;
+}
+
+.card__icon--about {
+  width: 50px;
+}
+.card__text--about {
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+/* =========== Aladino Team ======= */
+.team {
   color: #213441;
   padding: 40px 0 60px;
 }
 
-/* == member cards == */
+/* ====== member cards ====== */
 
-.member-header{
+.member-header {
   display: flex;
   align-items: center;
+  gap: 16px;
 }
 
-.member__avatar{
+.member__avatar {
   border-radius: 50%;
-  margin-right: 16px;
   width: 80px;
-  outline: 3px solid #E6E6E6;
+  outline: 3px solid #e6e6e6;
 }
-.member__name{
+.member__name {
   font-size: 18px;
   font-weight: 600;
 }
-.member__role{
+.member__role {
   font-size: 0.875rem;
-
 }
-.member__text{
+.member__text {
   font-size: 0.875rem;
   margin: 16px 0;
 }
-.member__link{
+.member__link {
   text-align: center;
 }
-.cards-wrapper{
+.cards-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.member-card{
+.member-card {
   background-color: white;
-  padding:28px;
+  padding: 28px;
   margin: 0 20px 40px;
-  box-shadow:0px 10px 40px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
   max-width: 600px;
 }
 
-/* ======== Mining Market ======= */
-.mining-market{
+/* ======== Mercato Mining ======= */
+.mercato {
   color: white;
-  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
-  padding: 30px 0 70px;
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151e30 100%);
+  padding: 0 0 70px;
 }
-.mining-market--light{
-  color: var(--color-black);
-  background: #f3f3f3;
+.mercato .container {
+  padding-left: 3%;
+  padding-right: 3%;
 }
-.mining-card{
-  max-width: 600px;
+.mercato-cards {
+  gap: 15px;
+}
+
+.mercato-card {
+  max-width: 380px;
   margin-bottom: 28px;
+}
+.mercato-card__heading {
+  font-size: 1rem;
+  font-size: clamp(0.875rem, 0.6549rem + 0.7042vw, 1.5rem);
+  margin: 1.5em 0 1em;
+}
+.mercato-card__link {
+  font-size: 9px;
+  line-height: 1;
 }
 
 /* ========= Exclusive Club ========== */
-.exclusive-club{
-  padding: 30px 0px 0;
+.exclusive-club {
+  padding: 0 0 30px;
 }
-.million-card{
+.million-card-wrapper {
+  margin: 20px;
+}
+.million-card {
   background-color: white;
-  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
   text-align: center;
-  padding:30px 60px;
+  padding: 30px 60px;
+  padding: 0px 60px 10px;
   border-radius: 30px;
   max-width: 700px;
   margin-left: auto;
@@ -296,47 +386,115 @@ nav {
 }
 
 /* ======== Strategy Card ====== */
-.strategy-cards{
+.strategy-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px 0 0px;
 }
-.strategy-card{
+.strategy-card {
   display: flex;
-  max-width: 295px;
+  max-width: 312px;
   align-items: flex-start;
   margin-bottom: 30px;
 }
-.strategy-card__image{
+.strategy-card__image {
   margin-right: 20px;
   margin-top: 2px;
 }
-.strategy-card__text{
+.strategy-card__text {
   margin-top: 4px;
   font-size: 13px;
   margin-right: -12px;
 }
-.ourbet{
+
+/* ========= Aladino Bet ======== */
+.ourbet {
   margin-bottom: 60px;
+}
+.ourbet-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.card--ourbet {
+  max-width: 400px;
+}
+
+/* ========== Why Aladino Works ========== */
+.works {
+  color: white;
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151e30 100%);
+  padding-bottom: 30px;
+}
+.works-stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.stats__text {
+  font-size: 1rem;
+  font-size: clamp(0.875rem, -0.0142rem + 2.8455vw, 1.75rem);
+  font-weight: 600;
+  text-align: right;
+  margin: 0;
+}
+.stat__numbers {
+  font-size: 2rem;
+  font-size: clamp(2rem, -1.811rem + 12.1951vw, 5.75rem);
+  font-weight: 800;
+  margin: 0;
+}
+.text-green {
+  color: #72bbc4;
+}
+.works-content {
+  margin: 48px 5%;
+}
+.works-content p {
+  margin: 4px 0;
+  max-width: 825px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.works-content h4 {
+  font-weight: 800;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+/* ======== Aladino Clients ======= */
+.clients-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.client-card {
+  border-radius: 20px;
+  padding: 60px 30px;
+  margin: 0 20px;
+  color: white;
+  max-width: 300px;
+  background-image: linear-gradient(148deg, #8ffedb 1.54%, #77d4bb 3.04%, #5fab9b 4.8%, #4a877e 6.73%, #386867 8.79%, #2a4f53 11.04%, #1f3c44 13.54%, #172e3a 16.44%, #122634 20.1%, #112432 26.99%, #11202f 63.9%, #101528 98.46%);
 }
 
 /* ======= Business Model ====== */
-.business-model{
+.business-model {
   padding: 30px 0;
   text-align: center;
   color: white;
-  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151e30 100%);
 }
-.business-model__heading{
+.business-model__heading {
   margin-bottom: 16px;
 }
-.business-model-content{
+.business-model-content {
   margin: 40px 0 80px;
 }
-.business-model__image{
+.business-model__image {
   background-color: white;
-  box-shadow: 0px 21px 77px 0px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 21px 77px 0px rgba(0, 0, 0, 0.1);
   display: block;
   padding: 40px;
   border-radius: 22px;
@@ -345,18 +503,18 @@ nav {
 }
 
 /* ============ Why us ========= */
-.whyus{
+.whyus {
   background-color: #f3f3f3;
   color: var(--color-black);
   padding: 30px 0;
 }
-.whuus__title{
+.whuus__title {
   margin-bottom: 0;
 }
-.whyus__heading{
+.whyus__heading {
   text-align: left;
 }
-.versus{
+.versus {
   width: 80px;
   text-align: center;
 
@@ -364,19 +522,19 @@ nav {
   margin: 32px auto;
   border-radius: 10px;
   background-color: white;
-  box-shadow:0px 10px 40px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
   font-weight: 700;
 }
 
 /* ========= How to start ========= */
-.steps{
+.steps {
   color: white;
-  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151E30 100%);
+  background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151e30 100%);
   padding: 30px 0 60px;
   position: relative;
 }
-.steps::before{
-  content: "";
+.steps::before {
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -389,149 +547,91 @@ nav {
   background-position: center top;
   pointer-events: none;
 }
-.steps-content{
+.steps-content {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-
 }
-.step{
+.step {
   text-align: center;
   text-align: center;
   max-width: 150px;
   font-weight: bold;
 }
-.step__arrow{
+.step__arrow {
   display: block;
   transform: rotate(90deg);
 }
 
-
-/* ============ FAQS ========= */
-
-.faqs{
-  padding: 30px 0;
-}
-
-.faq__item{
-  margin:0 20px;
-}
-.accordion {
-  text-align: left;
-  font-size: 15px;
-  font-weight: 500;
-  cursor: pointer;
-  position: relative;
-  width: 100%;
-  padding: 14px 20px;
-  padding-right: 40px;
-  border-radius: 50px;
-  margin: 0;
-  transition: 0.4s;
-  background-color: white;
-  box-shadow:0px 10px 40px rgba(0, 0, 0, 0.10);
-  -webkit-tap-highlight-color: transparent;
-}
-.accordion::before{
-  content: "";
-  position: relative;
-  display: inline-block;
-  background-image: url('../images/faq-icon.png');
-  background-size: contain;
-  vertical-align: middle;
-  background-repeat: no-repeat;
-  padding-right: 2.5em;
-  width: 1.3em;
-  height: 1.3em;
-}
-
-.accordion:after {
-  content: url('../images/plus-icon.svg');
-  float: right;
-  margin-left: 14px;
-  position: absolute;
-  right: 20px;
-  line-height: 1;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.accordion.active:after {
-  content: url('../images/minus.svg');
-  transition: all 0.5s;
-}
-
-.panel {
-  font-weight: 500;
-  padding: 0 18px;
-  margin: 10px 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-
 /* ========== Footer ======== */
-.footer{
+.footer {
   color: white;
   font-size: 12px;
-  background-image:  linear-gradient(180deg, #122634 7.92%, #223542 100%);
+  background-image: linear-gradient(180deg, #122634 7.92%, #223542 100%);
 }
-.footer-links{
+.footer-links {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-.footer-list{
+.footer-list {
   padding-left: 0;
   list-style-type: none;
 }
-.footer-nav{
+.footer-nav {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   padding: 60px 0 50px;
 }
-.footer-nav-item{
+.footer-nav-item {
   min-width: 50px;
 }
-.footer-nav-item p{
+.footer-nav-item p {
   font-size: 12px;
   font-weight: bold;
 }
-.footer-social{
+.footer-social {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.footer-social img{
+.footer-social img {
   border-radius: 5px;
 }
-.footer-info{
+.footer-info {
   display: flex;
   gap: 20px;
   align-items: center;
   line-height: 1.7;
 }
-.footer-logo{
+.footer-logo {
   padding-bottom: 50px;
   text-align: center;
   padding-top: 48px;
 }
 
-
-
-
-
 /* ========== Utilities ========== */
-.bold{
+.medium {
+  font-weight: 500;
+  /* line-height: 1.75; */
+}
+.bold {
   font-weight: bold;
+}
+.text-center {
+  text-align: center;
 }
 
 @media (min-width: 992px) {
-  p{
-    font-size: 1rem
+  p {
+    font-size: 1rem;
+  }
+  .card {
+    margin: 0 20px 40px;
+    padding: 40px;
   }
   /* ========== Navbar ========== */
   .hamburger {
@@ -572,113 +672,126 @@ nav {
     margin-right: 0;
   }
   /* ================ Hero =========== */
-  .hero-image{
+  .hero-image {
     position: static;
   }
   /* ============ About us ==========*/
-  /* == Member cards */
-  .cards-wrapper{
-    justify-content: space-between;
+  .about-cards-wrapper {
+    margin-top: 72px;
   }
-  .member-card{
+  .card--about {
+    gap: 32px;
+  }
+  .card__icon--about {
+    width: 70px;
+  }
+
+  /* ============= Team =========== */
+  /* == Member cards */
+  .cards-wrapper {
+    justify-content: space-around;
+  }
+  .member-card {
     flex-basis: 45%;
   }
-  .member__text{
+  .member__text {
     font-size: 1rem;
   }
-  /* ===== Mining market ===== */
-  .mining-card{
-    flex-basis: 45%;
+  /* ===== Mercato mining ===== */
+  .mercato {
+    padding-bottom: 120px;
+  }
+  .mercato-cards {
+    gap: 30px;
+  }
+
+  .mercato-card {
+    flex-basis: 30%;
+  }
+  /* ========== Why Aladino Works ========== */
+  .works {
+    padding-bottom: 60px;
+  }
+
+  /* ======== Aladino Clients ======= */
+  .clients-cards {
+    justify-content: space-evenly;
+  }
+  .client-card {
+    padding: 80px 40px 60px;
+    margin: 0;
   }
   /* ======== Business model ===== */
-  .business-model__image{
+  .business-model__image {
     max-width: 600px;
   }
   /* ========== Strategy ======== */
-  .strategy-cards{
+  .strategy-cards {
     justify-content: space-evenly;
   }
-  .strategy-card{
+  .strategy-card {
     margin-top: 60px;
-   margin-bottom: 0;
+    margin-bottom: 0;
   }
   /* ======= Why Us ====== */
-  .whyus{
+  .whyus {
     padding-bottom: 70px;
   }
-  .whyus-content{ display: flex;
+  .whyus-content {
+    display: flex;
     align-items: flex-start;
     gap: 40px;
   }
-  .whyus__heading--right{
+  .whyus__heading--right {
     text-align: right;
   }
-  .versus{
+  .versus {
     font-size: 1.5rem;
     width: 100px;
     flex-shrink: 0;
     margin: 3em 0;
   }
   /* ======= Steps ======== */
-  .steps{
+  .steps {
     padding-bottom: 180px;
     padding-top: 80px;
   }
-  .steps h2{
-    margin-bottom: 22px
+  .steps h2 {
+    margin-bottom: 22px;
   }
-  .step{
+  .step {
     position: relative;
-    padding:60px 0 60px;
+    padding: 60px 0 60px;
   }
-  .step p{
+  .step p {
     position: absolute;
     min-width: 170px;
     left: 50%;
     transform: translateX(-50%);
   }
-  .steps-content{
+  .steps-content {
     flex-direction: row;
     gap: 50px;
     margin-left: -35px;
   }
-  .step__arrow{
+  .step__arrow {
     transform: rotate(0);
   }
-  /* ============ FAQS ========= */
-  .faqs{
-    padding-bottom: 80px;
-  }
-  .faqs-wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+  /* =========== Footer ========= */
+  .footer-links {
+    flex-direction: row;
     justify-content: space-evenly;
   }
-  .faqs-wrapper > * {
-    flex-basis: 45%;
+  .footer-nav {
+    padding-bottom: 20px;
   }
-.accordion {
-  font-size: 18px;
-}
-.panel{
-  padding:0 30px;
-}
-/* =========== Footer ========= */
-.footer-links{
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-.footer-nav{
-  padding-bottom: 20px;
-}
-.footer-info{
-  gap: 70px;
-  align-self: flex-end;
-  padding-bottom: 20px;
-}
-.footer-logo{
-  padding-top: 0;
-}
-
+  .footer-info {
+    gap: 70px;
+    align-self: flex-end;
+    padding-bottom: 20px;
+  }
+  .footer-logo {
+    padding-top: 18px;
+    padding-bottom: 20px;
+  }
 }
