--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -479,6 +479,28 @@ nav {
   background-image: linear-gradient(148deg, #8ffedb 1.54%, #77d4bb 3.04%, #5fab9b 4.8%, #4a877e 6.73%, #386867 8.79%, #2a4f53 11.04%, #1f3c44 13.54%, #172e3a 16.44%, #122634 20.1%, #112432 26.99%, #11202f 63.9%, #101528 98.46%);
 }
 
+.proto-cards{
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 48px;
+}
+.proto-card{
+  max-width: 400px;
+  background-color: white;
+    border-radius: 28px;
+    margin: 20px 20px 20px;
+    padding: 28px;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
+}
+.proto-card img{
+  width: 50px;
+  margin-bottom: 16px;
+}
+.proto-card .proto-card__image{
+  width: 40px;
+
+}
+
 /* ======= Business Model ====== */
 .business-model {
   padding: 30px 0;
@@ -486,9 +508,7 @@ nav {
   color: white;
   background: radial-gradient(129.7% 129.7% at 51.95% 80.97%, #213441 60.76%, #151e30 100%);
 }
-.business-model__heading {
-  margin-bottom: 16px;
-}
+
 .business-model-content {
   margin: 40px 0 80px;
 }
@@ -721,7 +741,25 @@ nav {
     padding: 80px 40px 60px;
     margin: 0;
   }
+
+  /* =========== Protocol ======= */
+  .proto-cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .proto-card{
+    margin: 0 20px 40px;
+    padding: 40px;
+  }
+  .proto-card img{
+    width: 60px;
+  }
+
   /* ======== Business model ===== */
+  .business-model__heading {
+    font-size: clamp(2.125rem, 1.6408rem + 1.5493vw, 3.5rem);
+  }
   .business-model__image {
     max-width: 600px;
   }
