--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -237,8 +237,10 @@ nav {
 .subtitle {
   text-align: center;
   margin-top: 16px;
-  margin-left: 8%;
-  margin-right: 8%;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-left: 8%;
+  margin-right: 8%; */
   font-weight: 500;
   line-height: 1.75;
   letter-spacing: 0.5px;
@@ -638,6 +640,9 @@ nav {
 @media (min-width: 992px) {
   p {
     font-size: 1rem;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .card {
     margin: 0 20px 40px;
