Vertically centering of hero content, Moved up by 68px, for better visual look or user experience

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -684,6 +684,9 @@ nav {
     margin-right: 0;
   }
   /* ================ Hero =========== */
+  .hero-content {
+    padding-top: 0;
+  }
   .hero-image {
     position: static;
   }
