footer logo updated to svg

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -621,6 +621,9 @@ nav {
   text-align: center;
   padding-top: 48px;
 }
+.footer-logo__image{
+  margin: 20px 0;
+}
 
 /* ========== Utilities ========== */
 .medium {
