--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -623,10 +623,46 @@ nav {
   width: 50px;
   height: 50px;
 }
-/* 30 day */
+/* ==========  30 day ===========  */
 .day30{
   background:linear-gradient(180deg, #11202F 7.92%, #223542 100%);
   padding-top: 160px;
+}
+.relative{
+  position: relative;
+}
+.day30 img{
+  user-select: none;
+}
+.challenge-text{
+  font-weight: 800;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-37%);
+}
+.fs-1{
+                
+  font-size: clamp(3.125rem, -1.7857rem + 15.7143vw, 10rem);
+color: #71BBC4;
+}
+.fs-2{
+
+  font-size: clamp(1.125rem, -0.8393rem + 6.2857vw, 3.875rem);
+  color: white;
+  white-space: nowrap;
+}
+.fs-3{
+text-align: center;
+font-size: clamp(0.75rem, -0.9464rem + 5.4286vw, 3.125rem);
+margin-top: 1em;
+}
+.fs33{
+  
+  font-size: clamp(0.75rem, -0.1429rem + 2.8571vw, 2rem);
+  background-color: #71BBC4;
+padding: 0.25em 2em;
+border-radius: 1em;
 }
 /* FAQs */
 .faqs{
