--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,93 +2,6 @@
   --color-black: #213441;
   --color-glacier:#72BBC4;
 }
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-html,
-body {
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-  font-size: 0.875rem;
-}
-
-html {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
-  color: var(--color-black);
-  background-color: #f3f3f3;
-  line-height: 1.3;
-  size-adjust: 100%;
-}
-body {
-  letter-spacing: 0.5px;
-}
-h1 {
-  margin: 0;
-  text-align: center;
-}
-h2 {
-  font-size: 2.125rem;
-  font-size: clamp(2.125rem, 1.3768rem + 2.3944vw, 4.25rem);
-  font-weight: bold;
-  text-align: center;
-  margin: 0;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-  margin-bottom: 1em;
-}
-h3 {
-  font-size: 1.375rem;
-  font-size: clamp(1.375rem, 0.7766rem + 1.9149vw, 2.5rem);
-  text-align: center;
-}
-h4 {
-  margin: 0;
-  font-size: 1rem;
-  font-size: clamp(0.875rem, 0.748rem + 0.4065vw, 1rem);
-}
-p {
-  font-size: 0.875rem;
-  line-height: 1.5;
-}
-a {
-  color: white;
-  text-decoration: none;
-}
-sup {
-  font-size: 0.5em;
-}
-img {
-  max-width: 100%;
-  vertical-align: middle;
-}
-address {
-  font-style: normal;
-}
-.tagline {
-  font-size: 1rem;
-  font-size: clamp(1rem, 0.6039rem + 1.2676vw, 2.125rem);
-  line-height: 1;
-  text-align: center;
-  margin-bottom: 0;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-top: 0;
-  padding-top: 4em;
-  letter-spacing: -1px;
-}
-
-.container {
-  padding-left: 5%;
-  padding-right: 5%;
-  max-width: 1440px;
-  width: 100%;
-  margin: 0 auto;
-}
 
 .card {
   background-color: white;
@@ -98,7 +11,7 @@ address {
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
 }
 
-/* ============ Navbar ========= */
+/* ============ Navbar =========
 header {
   width: 100%;
   background-color: #11202f;
@@ -186,7 +99,7 @@ nav {
 
 .bar:last-child {
   margin-bottom: 0;
-}
+} */
 
 /* ========== Hero ======== */
 
@@ -684,128 +597,18 @@ border-radius: 1em;
     display: inline-block;
 }
 
-/* ========== Footer ======== */
-.footer {
-  color: white;
-  font-size: 12px;
-  background-image: linear-gradient(180deg, #122634 7.92%, #223542 100%);
-}
-.footer-links {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.footer-list {
-  padding-left: 0;
-  list-style-type: none;
-}
-.footer-nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  padding: 60px 0 50px;
-}
-.footer-nav-item {
-  min-width: 50px;
-}
-.footer-nav-item a {
-  font-size: 12px;
-}
-.footer-social {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-.footer-social img {
-  border-radius: 5px;
-}
-.footer-info {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  align-items: center;
-  line-height: 1.7;
-}
-.footer-logo {
-  padding-bottom: 50px;
-  text-align: center;
-  padding-top: 48px;
-}
-.footer-logo__image{
-  margin: 20px 0;
-}
-
-/* ========== Utilities ========== */
-.medium {
-  font-weight: 500;
-}
-.semibold{
-  font-weight: 600;
-}
-.bold {
-  font-weight: bold;
-}
-.text-center {
-  text-align: center;
-}
 
 @media (min-width: 992px) {
-  p {
-    font-size: 1rem;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
   .card {
     margin: 0 20px 40px;
     padding: 40px;
   }
-  /* ========== Navbar ========== */
-  .hamburger {
-    display: none;
-  }
-  .main-nav {
-    display: flex;
-    position: static;
-    flex-direction: revert;
-    padding: 0;
-    min-height: auto;
-    box-shadow: none;
-    width: auto;
-  }
-  .main-nav.active {
-    background-color: transparent;
-  }
-  .login-link{
-    background-color: #72BBC4;
-    padding: 10px 18px;
-    border-radius: 10px;
-    background-color: #72BBC4;
-  }
-  .wrapper {
-    background-size: 45%;
-    background-position: 90% center;
-  }
-  .container {
-    padding-left: 10%;
-    padding-right: 10%;
-  }
+
+  /* ================ Hero =========== */
   .hero {
     background-position: 90% center;
   }
-  .logo {
-    flex-basis: auto;
-    margin: 0;
-    margin-right: auto;
-  }
-  .main-nav a {
-    margin: 0 10px;
-  }
-  .main-nav li:last-child a {
-    margin-right: 0;
-  }
-  /* ================ Hero =========== */
   .hero-content {
     padding-top: 0;
   }
@@ -920,23 +723,5 @@ border-radius: 1em;
     padding-left: 60px;
     padding-right: 60px;
   }
-  /* =========== Footer ========= */
-  .footer-links {
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding-top: 60px;
-  }
-  .footer-nav {
-    padding-top: 0;
-    padding-bottom: 20px;
-  }
-  .footer-info {
-    gap: 70px;
-    align-self: center;
-    padding-bottom: 20px;
-  }
-  .footer-logo {
-    padding-top: 18px;
-    padding-bottom: 20px;
-  }
+  
 }
